--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "@shopify/flash-list": "^1.7.3",
+    "@testing-library/react-native": "^13.0.1",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-collapsible": "^1.6.2",
     "react-native-config": "^1.5.5",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-safe-area-context": "^5.2.0",
